--- a/templates/pago_extranjero.html
+++ b/templates/pago_extranjero.html
@@ -14,8 +14,8 @@
         <nav class="nav">
             <a href="{{ url_for('index') }}">Inicio</a>
             <a href="{{ url_for('menu_bp.compania') }}">La Compañía</a>
-            <a href="{{ url_for('index') }}#servicios">Servicios</a>
-            <a href="{{ url_for('index') }}#requisitos">Requisitos</a>
+            <a href="{{ url_for('menu_bp.servicios') }}">Servicios</a>
+            <a href="{{ url_for('menu_bp.requisitos') }}">Requisitos</a>
             <a href="{{ url_for('contacto_bp.contactos') }}">Contactos</a>
         </nav>
 
