--- a/templates/detalle_casa.html
+++ b/templates/detalle_casa.html
@@ -11,8 +11,8 @@
     <div class="container">
         <nav class="nav">
             <a href="{{ url_for('index') }}">Inicio</a>
-            <a href="{{ url_for('index') }}#compania">La Compañía</a>
-            <a href="{{ url_for('index') }}#servicios">Servicios</a>
+            <a href="{{ url_for('menu_bp.compania') }}">La Compañía</a>
+            <a href="{{ url_for('menu_bp.servicios') }}">Servicios</a>
             <a href="{{ url_for('menu_bp.buscar') }}">Buscar</a>
             <a href="{{ url_for('contacto_bp.contactos') }}">Contactos</a>
         </nav>
