--- a/templates/search.html
+++ b/templates/search.html
@@ -16,9 +16,9 @@
     <div class="container">
         <nav class="nav">
             <a href="{{ url_for('index') }}">Inicio</a>
-            <a href="{{ url_for('index') }}#compania">La Compañía</a>
-            <a href="{{ url_for('index') }}#servicios">Servicios</a>
-            <a href="{{ url_for('index') }}#requisitos">Requisitos</a>
+            <a href="{{ url_for('menu_bp.compania') }}">La Compañía</a>
+            <a href="{{ url_for('menu_bp.servicios') }}">Servicios</a>
+            <a href="{{ url_for('menu_bp.requisitos') }}">Requisitos</a>
             <a href="{{ url_for('contacto_bp.contactos') }}">Contactos</a>
         </nav>
 
