--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -274,9 +274,7 @@
             <td data-field="costo"></td>
             <td data-field="recamaras"></td>
             <td data-field="baños"></td>
-            <td>
-                <span class="status-badge" data-field="estatus"></span>
-            </td>
+            <td data-field="estatus"></td>
             <td>
                 <button class="btn-action btn-edit" data-action="edit" data-entity="casa">
                     <i class="fas fa-edit"></i>
