--- a/templates/search.html
+++ b/templates/search.html
@@ -82,7 +82,14 @@
                             </select>
                         </div>
 
-                        <button id="btnBuscar" class="search-btn" type="button">Buscar</button>
+                        <div style="display: flex; gap: 10px;">
+                            <button id="btnBuscar" class="search-btn" type="button" style="flex: 1;">
+                                <i class="fas fa-search"></i> Buscar
+                            </button>
+                            <button id="btnLimpiar" class="btn-limpiar" type="button" style="flex: 1;">
+                                <i class="fas fa-eraser"></i> Limpiar
+                            </button>
+                        </div>
                     </form>
 
                     <!-- Resultados -->
