--- a/templates/search.html
+++ b/templates/search.html
@@ -41,6 +41,7 @@
                         <div class="form-group">
                             <label>Rango de Busqueda (km)</label>
                             <select name="rango_km">
+                                <option value="" {% if not rango_km %}selected{% endif %}>Cualquiera</option>
                                 <option value="1" {% if rango_km==1 %}selected{% endif %}>1 km</option>
                                 <option value="5" {% if rango_km==5 %}selected{% endif %}>5 km</option>
                                 <option value="10" {% if rango_km==10 %}selected{% endif %}>10 km</option>
@@ -81,7 +82,7 @@
                             </select>
                         </div>
 
-                        <button id="btnBuscar" class="search-btn" type="submit">Buscar</button>
+                        <button id="btnBuscar" class="search-btn" type="button">Buscar</button>
                     </form>
 
                     <!-- Resultados -->
@@ -192,5 +193,6 @@
     {{ resultados | tojson | safe }}
     </script>
     <script src="{{ url_for('static', filename='js/mapa.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/geoloc.js') }}"></script>
 </body>
 </html>
